Add Drosophila genome lengthts.

--- a/vignettes/CoalescingCutoffs.Rmd
+++ b/vignettes/CoalescingCutoffs.Rmd
@@ -100,7 +100,8 @@ cutoff_coas_tables$LargestSegmentName <-
 genome_sizes=list(Aom=sum(seqlengths(genomes$Aom)), Bar=sum(seqlengths(genomes$Bar)),
                   Oki=sum(seqlengths(genomes$Oki)), Osa=sum(seqlengths(genomes$Osa)),
                   Kum=sum(seqlengths(genomes$Kum)), Nor=sum(seqlengths(genomes$Nor)),
-                  Ply=175288331, Ros=275796282, Sav=177003750, Rob=115226814
+                  Ply=175288331, Ros=275796282, Sav=177003750, Rob=115226814,
+                  Dme=137547960, Dbu=110837441, Dsu=130045071, Dya=136883712
                   )
 match_pair_with_sizes = function(pair, genome_sizes) {
   spp = unlist(strsplit(pair, "_"))
